# the-notes-of-cuda-programming

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chapter5 programming model.md  chapter5.cu  liuda  test.cpp
CUDA/1.6 Stream/: CMakeLists.txt
CUDA/1.6 Stream/src/: gelu.cu  stream.cu
TensorRT/2.7 Mnist-sample/: CMakeLists.txt  readme.md
TensorRT/2.9 Infer_model/: CMakeLists.txt
TensorRT/2.9 Infer_model/inc/: model.hpp
TensorRT/2.9 Infer_model/models/onnx/: engineMHSA-swin-subgraph.engine  engineinfer.engine
TensorRT/2.9 Infer_model/src/: main.cpp  model.cpp
code/: CMakeLists.txt  GPU_Cache.cu  chapter5_2(2).cu  chapter5_2.cu  chapter5_2_1.cu  chapter5_3.cu  common.cuh  constant_memory.cu  dynamic_shared_memory.cu  enventRecord.cu  grid2D_block2D.cu  query.cu  readme.md  register_num.cu
code/CPU/0.1 Lamba/: test
code/CPU/0.2 Smart Pointers/: deleter.cpp  init_sample  init_sample.cpp  safe_shared_ptr.cpp  weak_ptr_reutrn_this  weak_ptr_reutrn_this.cpp
code/CPU/0.3 Rvalue&Move&Perfect/: Rvalue_Reference_exp1  Rvalue_Reference_exp1.cpp  Rvalue_Reference_exp2  Rvalue_Reference_exp2.cpp  Rvalue_Reference_exp3  Rvalue_Reference_exp3.cpp  Rvalue_Reference_exp4.cpp  Rvalue_Reference_exp5  Rvalue_Reference_exp6  Rvalue_Reference_exp6.cpp
code/CPU/0.4 Asynchronous Operation/: Asnc_Op_exp2  readme.md
code/CPU/0.4 Asynchronous Operations/: Asnc_Op_exp1  Asnc_Op_exp1.cpp  Asnc_Op_exp2.cpp  Asnc_Op_exp3.cpp  Asnc_Op_exp4.cpp
code/CPU/0.5 Atomic Operation/: Atomic_Op_exp3  Atomic_Op_exp3.cpp  Atomic_Op_exp4.cpp  Atomic_Op_exp5  Atomic_Op_exp5.cpp  Atomic_Op_exp6
code/CPU/0.6 Variant/: Variant_exp3
code/CUDA/1.0 Simple example/: GPU_direct.cpp  chapter5_3.cu  coarsening.cu  constant_memory.cu  cuda_min_reduce  cuda_min_reduce.cu  fuse_three_kernel.cu  global_memory.cu  mem_coalescing.cu  privatization.ncu-rep  query.cu  relu.cu  transMul.cu
code/CUDA/1.1 Reduce/: liuda  reduce-baseline.cu  reduce5.ncu-rep  reduce_v0  reduce_v0_baseline.cu  reduce_v1  reduce_v1_interleaved_address.cu  reduce_v2  reduce_v2_sequential_address.cu  reduce_v3_idle.cu  reduce_v4  reduce_v4_unroll_lastwarp.cu  reduce_v5  reduce_v6  reduce_v6_adjust.cu  reduce_v7  reduce_v7_torch_BlockReduce.cu  report1.ncu-rep  report2.ncu-rep  report3.ncu-rep  report6.ncu-rep  test.py
code/CUDA/1.1 Simple example/: chapter5_2_1.cu  query.cu  relu.cu
code/CUDA/1.2 Test_warp/inc/: reduce.hpp  utils.hpp
code/CUDA/1.2 Test_warp/src/: reduce_cpu.cpp
code/CUDA/1.3 MergeSort/: liuda  nixudui.cpp
code/CUDA/1.3 MergeSort/inc/: helper_string.h
code/CUDA/1.3 MergeSort/src/: bitonic.cu  main.cpp
code/CUDA/1.4 Matmul-shared-memory/inc/: timer.hpp  utils.hpp
code/CUDA/1.4 Matmul-shared-memory/src/: main.cpp  matmul_gpu_shared.cu
code/CUDA/1.5 Shared_conflict/: CMakeLists.txt
code/CUDA/1.5 Shared_conflict/src/: mat_shared_confict.cu
code/CUDA/1.6 Stream/src/: main.cpp  timer.cpp  utils.cpp
code/CUDA/1.7 FlashAttn/: V1.cu  bench.py  brench.py  main.cpp
code/MPI/: readme.md
code/MPI/4.1 Peer to peer/: mpi_status.cc  ping_pong.cc  probe  probe.cc  random_walk  send_recv  send_recv.cc
code/MPI/4.1 Peer to peer/random_walk.dSYM/Contents/: Info.plist
code/MPI/4.1 Peer to peer/send_recv.dSYM/Contents/: Info.plist
code/MPI/4.1 Send & Recv/: mpi_status.cc  ping_pong.cc  send_recv.cc
code/MPI/4.1 Send & Recv/mpi_status.dSYM/Contents/: Info.plist
code/MPI/4.2 Collective/: avg_allgather
code/MPI/4.3 Advanced collective/: MPI_AllReduce
code/MPI/4.3 Advanced collective/MPI_AllReduce.dSYM/Contents/: Info.plist
code/Simple example/: GPU_Cache.cu  computecores.cu  constant_memory.cu  dynamic_shared_memory.cu  enventRecord.cu  global_memory.cu  grid2D_block2D.cu  grid_block_123D.cu  liuda.exp  liuda.lib  register_num.cu  static_shared_memory.cu
code/TensorRT/: readme.md
code/TensorRT/2.1 Generate-onnx/: example.py
code/TensorRT/2.10 Custom-trt-plugin/src/: model.cpp
code/TensorRT/2.2 Export-onnx/: model-reshape.onnx  sample.py  torchvision_models.py
code/TensorRT/2.3 Read-parse/: creat-onnx-convnet.py  creat-onnx-linear.py  parse_onnx_convnet.py
code/TensorRT/2.3 Read-parse/models/: convnet-sample.onnx  sample-convnet.onnx
code/TensorRT/2.4 Export-unsupport-node/: asinh.py  custom_autograd.py  deformable_conv.py  register_asinh.py  register_custom_autograd.py  register_deformable_conv.py
code/TensorRT/2.4 Export-unsupport-node/models/: sample-deformable.onnx
code/TensorRT/2.5 Onnxsurgeon/: .gitignore  gs_creat.py  gs_creat_subgraph.py  gs_replace.py
code/TensorRT/2.5 Onnxsurgeon/models/: conv.onnx  minmax-clip.onnx  register-graph.onnx
code/TensorRT/2.6 Trtexec/tools/: build.ps1  command_instructions.md  readme.md
code/TensorRT/2.7 Mnist-sample/: CMakeLists.txt  readme.md
code/TensorRT/2.7 Mnist-sample/src/: mnist_onnx.cpp
code/TensorRT/2.8 Load_model/models/engine/: sample.engine
code/TensorRT/2.8 Load_model/src/cpp/: model.cpp  utils.cpp  utils.hpp
code/TensorRT/2.8 Load_model/tools/: profile.ps1
code/TensorRT/2.9 Infer_model/: generate_onnx.py
code/TensorRT/2.9 Infer_model/inc/: model.hpp  utils.hpp
code/TensorRT/2.9 Infer_model/src/: main.cpp  model.cpp  utils.cpp
code/TensorRT/2.9 Infer_model/tools/: infer.ps1
code/matmul-shared-memory/inc/: matmul.hpp  timer.hpp
code/matmul-shared-memory/src/: main.cpp  matmul_gpu_basic.cu  matmul_gpu_shared.cu  timer.cpp  utils.cpp
code/mergeSort/: CMakeLists.txt  bitonic.cu  liuda  main.cpp  mergeSort.cu  mergeSort_common.h  mergeSort_host.cpp  mergeSort_validate.cpp  nixudui.cpp  test.cpp
code/mergeSort/inc/: helper_cuda.h  helper_functions.h  mergeSort_common.h
code/mergeSort/src/: mergeSort_validate.cpp
code/shared_confict/inc/: matmul.hpp  utils.hpp
code/shared_confict/src/: main.cpp  mat_shared_confict.cu  utils.cpp
code/test_warp/: CMakeLists.txt  readme.md  report1.nsys-rep
code/test_warp/inc/: timer.hpp
code/test_warp/src/: main.cpp  matmul_gpu_basic.cu
code/trt0-generate-onnx/: example.py
code/trt0-generate-onnx/models/: example_dynamic_shape.onnx  example_two_head.onnx
(+143 files in other folders)
